# run↓
#cargo rustc -- -C link-args="/ENTRY:_start /SUBSYSTEM:console"
[package]
name = "kernrust-toolchainel"
version = "0.1.0"
edition = "2021"
authors = ["Author yuI"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
[dependencies]
bootloader = "0.9.8"
